Fixed up padding on mobile

--- a/app/assets/stylesheets/about.sass
+++ b/app/assets/stylesheets/about.sass
@@ -1,8 +1,21 @@
 @import "variables/colors"
+@import "variables/dimensions"
 
 .about-container
   .body-container
-    text-align: center
+    text-align: left
+
+    @media screen and (min-width: $tablet-width)
+      text-align: center
+
+
+    .image-container
+      text-align: center
+
+    img
+      margin: 12px 0
+      max-width: 236px
+      height: auto
 
   .overview-section
     padding-bottom: 48px
