--- a/app/assets/stylesheets/resume.sass
+++ b/app/assets/stylesheets/resume.sass
@@ -15,7 +15,7 @@
     .resume-download-link
       border: 2px solid $black
       color: $black
-      padding: 8px
+      padding: 8px 24px
       display: inline-block
       margin-top: 24px
       text-decoration: none
